objects/Removed_Account__c.object
<CustomObject>
    <description>This object is used to store a summary view of the Accounts that have been Archived and subsequently removed from Salesforce.

These records are created via the Archive Remove data load process.</description>
    <fields>
        <fullName>Account_City__c</fullName>
        <description>Billing City on the original Account record at time of remove.</description>
        <label>Account City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Billing Country on the original Account record at time of remove.</description>
        <label>Account Country</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DUNS__c</fullName>
        <description>DUNS number on the original Account record at time of remove.</description>
        <label>Account DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>Phone on the original Account record at time of remove.</description>
        <label>Account Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <label>Account State</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Street__c</fullName>
        <description>Billing Street on the original Account record at time of remove.</description>
        <label>Account Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Members__c</fullName>
        <description>List of User Id&apos;s for those assigned as Account Team members for the Account at the time the Account was removed.</description>
        <label>Account Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Removed_from_SDFC__c</fullName>
        <description>The date the record was removed from Salesforce.</description>
        <label>Date Removed from SFDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division on the original Account record at time of remove.</description>
        <label>Division</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECC_Segment_Level_1__c</fullName>
        <label>Frozen Market Current Year Segment L1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Tax</fullName>
                </value>
                <value>
                    <fullName>Professional Legal</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECC_Segment_Level_2__c</fullName>
        <label>Frozen Market Current Year Segment L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECC_Segment_Level_3__c</fullName>
        <label>Frozen Market Current Year Segment L3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry on the original Account record at time of remove.</description>
        <label>Industry</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameTwo__c</fullName>
        <description>Name 2 of the original Account record at time of remove.</description>
        <label>Name 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Account_SFDC_Id__c</fullName>
        <description>SFDC Account Id from the originl Account record at time of remove.</description>
        <label>Original Account SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_SFDC_Id__c</fullName>
        <description>SFDC Account Id form the Parent Account lookup on the original Account record at time of remove.</description>
        <label>Parent Account SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Duplicate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surviving Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Removed Accounts</relationshipLabel>
        <relationshipName>Removed_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Sales Org on the original Account record at time of remove.</description>
        <label>Sales Org</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Removed Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Removed Accounts</pluralLabel>
    <recordTypes>
        <fullName>Removed_Duplicate_Account</fullName>
        <active>true</active>
        <label>Removed Duplicate Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>